--- a/themes/icarus/source/css/_partial/article.styl
+++ b/themes/icarus/source/css/_partial/article.styl
@@ -4,6 +4,15 @@
 .article-inner
     @extend $block
     overflow: hidden
+    a[target="_blank"]
+        &::after
+            content: ''
+            display: inline-block
+            width: 12px
+            height: 12px
+            margin-left: 2px
+            background: url('/css/images/icon-new-window.svg') no-repeat 0 0/100%
+
 
 .article-banner
     width:100%
