--- a/themes/icarus/layout/index.ejs
+++ b/themes/icarus/layout/index.ejs
@@ -4,8 +4,8 @@
 if (page.total > 1) { %>
     <nav id="page-nav">
         <%- paginator({
-            prev_text: '&laquo; ' + __('nav.prev'),
-            next_text: __('nav.next') + ' &raquo;'
+            prev_text: '&lt; ' + __('nav.prev'),
+            next_text: __('nav.next') + ' &gt;'
         }) %>
     </nav>
 <% } %>
